--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+   <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		<script src="/public/Cesium.js"></script>
+		<script src="/Cesium.js"></script>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
