--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Cache-control" content="no-cache">
   <meta http-equiv="Cache" content="no-cache">
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-  <title>模板</title>
+  <title>react模板</title>
 </head>
   <body>
     <div id="root"></div>
